# RiddleGenerator

./: README.md
RiddleGen/: .env  .env.test  .gitignore  pyproject.toml
RiddleGen/data/: riddles.csv  test-riddles.csv
RiddleGen/dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
RiddleGen/src/: config.py  database_connection.py  index.py  initialize_database.py  ui.py
RiddleGen/src/entities/: riddle.py
RiddleGen/src/repositories/: riddle_repository.py
RiddleGen/src/services/: riddle_service.py
RiddleGen/src/tests/: riddle_repository_test.py  riddle_service_test.py
RiddleGen/src/ui/: answer_correct_view.py  answer_incorrect_view.py  answer_riddle_view.py  guess_riddle_view.py  main_view.py  ui.py  write_riddle_view.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/htmlcov/: index.html  src_maksukortti_py.html  status.json
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
riddleGen/dokumentaatio/: vaatimusmaarittely.md
