[tool.poetry]
name = "riddlegen"
version = "0.1.0"
description = ""
authors = ["Nora Elisa <nora.heikkila@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.9"
cowsay = "^3.0"
invoke = "^1.5.0"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
